revert pom.xml changes